[mU] 增加Minus,Divide及cmake工程文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,8 @@ set(LIBRARY_OUTPUT_PATH ..)
 add_subdirectory(Kernel)
 add_subdirectory(Parser)
 add_subdirectory(System)
+add_subdirectory(Interface)
 add_subdirectory(String)
+add_subdirectory(Number)
+add_subdirectory(Function)
 add_subdirectory(mU)
