--- a/Polynomial/Polynomial.vcxproj.filters
+++ b/Polynomial/Polynomial.vcxproj.filters
@@ -15,16 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Include\mU\Polynomial.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Polynomial.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="Plus.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Times.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\Include\mU\Polynomial.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+    <ClCompile Include="Divide.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Minus.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
