--- a/Parser/Parser.vcxproj
+++ b/Parser/Parser.vcxproj
@@ -106,13 +106,8 @@
     <ClCompile Include="scan.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Include\mU\Grammar.h" />
     <ClInclude Include="..\Include\mU\Parser.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Kernel\Kernel.vcxproj">
-      <Project>{4b23d1ac-b07f-4167-b00f-f6c3246fa233}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
