[mU] 增加组合数学，稀疏多项式。修改基本运算，数值计算等。

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,20 @@
 /Combinatorics/Debug
 /Numeric/Debug
 /Numeric/Release
+/.svn
+/.settings/.svn
+/Calculus/.svn
+/Combinatorics/.svn
+/Include/.svn
+/Include/mU/.svn
+/Interface/.svn
+/Kernel/.svn
+/mU/.svn
+/Number/.svn
+/Numeric/.svn
+/Parser/.svn
+/Polynomial/.svn
+/String/.svn
+/System/.svn
+/Test/.svn
+/build
