--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ set(CMAKE_CXX_FLAGS "-std=c++0x -L.")
 set(EXECUTABLE_OUTPUT_PATH ..)
 set(LIBRARY_OUTPUT_PATH ..)
 
-add_subdirectory(Kernel)
-add_subdirectory(Parser)
-add_subdirectory(System)
+add_subdirectory(Combinatorics)
 add_subdirectory(Interface)
-add_subdirectory(String)
-add_subdirectory(Number)
-add_subdirectory(Function)
+add_subdirectory(Kernel)
 add_subdirectory(mU)
+add_subdirectory(Number)
+add_subdirectory(Numeric)
+add_subdirectory(Parser)
+add_subdirectory(Polynomial)
+add_subdirectory(System)
+add_subdirectory(String)
