--- a/Kernel/Kernel.vcxproj.filters
+++ b/Kernel/Kernel.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="var.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Include\mU\Common.h">
@@ -60,6 +63,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\Include\mU\var.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Include\mU\utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Include\mU\Object.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
