--- a/Polynomial/Polynomial.vcxproj.filters
+++ b/Polynomial/Polynomial.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="Sparse.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Expand.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
