--- a/Interface/Interface.vcxproj.filters
+++ b/Interface/Interface.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="头文件\Interface">
+      <UniqueIdentifier>{739d6f89-b857-40fa-9c71-4fa684add740}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Ecl">
+      <UniqueIdentifier>{9bc371df-259e-4223-84b4-68dbc96567f8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Interface.cpp">
@@ -24,6 +30,9 @@
     <ClCompile Include="MatchE.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Ecl\Ecl.cpp">
+      <Filter>源文件\Ecl</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Match.h">
@@ -31,6 +40,9 @@
     </ClInclude>
     <ClInclude Include="..\Include\mU\Interface.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Include\mU\Interface\Ecl.h">
+      <Filter>头文件\Interface</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
