--- a/Polynomial/Polynomial.vcxproj
+++ b/Polynomial/Polynomial.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="Add.cpp" />
     <ClCompile Include="Divide.cpp" />
+    <ClCompile Include="Expand.cpp" />
     <ClCompile Include="Minus.cpp" />
     <ClCompile Include="Plus.cpp" />
     <ClCompile Include="Polynomial.cpp" />
