--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -1,4 +1,4 @@
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. KERNEL_SRCS)
 add_library(kernel SHARED ${KERNEL_SRCS})
-target_link_libraries(kernel gmp) 
+target_link_libraries(kernel gmp dl)
