--- a/System/CMakeLists.txt
+++ b/System/CMakeLists.txt
@@ -1,4 +1,4 @@
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. SYSTEM_SRCS)
 add_library(system SHARED ${SYSTEM_SRCS})
-target_link_libraries(system dl kernel parser interface)
+target_link_libraries(system kernel parser)
