--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 2.6)
 project(mU CXX)
 
 set(mU_HEADER_DIR ${mU_SOURCE_DIR}/Include /usr/include /usr/include/c++/4.5)
-set(CMAKE_CXX_FLAGS "-std=c++0x -Wl,--enable-auto-import -L.")
+#set(CMAKE_CXX_FLAGS "-std=c++0x -Wl,--enable-auto-import -L.")
+set(CMAKE_CXX_FLAGS "-std=c++0x -L.")
 set(EXECUTABLE_OUTPUT_PATH ..)
 set(LIBRARY_OUTPUT_PATH ..)
 
