--- a/Package/Function/CMakeLists.txt
+++ b/Package/Function/CMakeLists.txt
@@ -1,5 +1,9 @@
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. FUNCTION_SRCS)
-add_library(Function MODULE ${FUNCTION_SRCS})
-target_link_libraries(Function mpfr)
+
+add_library(Function ${PACKAGE_LIB_TYPE} ${FUNCTION_SRCS})
+set_target_properties(Function PROPERTIES 
+                        COMPILE_DEFINITIONS "FUNCTION_EXPORTS")
+
+target_link_libraries(Function mU gmp mpfr)
 
