--- a/Package/Matrix/CMakeLists.txt
+++ b/Package/Matrix/CMakeLists.txt
@@ -1,4 +1,7 @@
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. MATRIX_SRCS)
-add_library(Matrix MODULE ${MATRIX_SRCS})
+
+add_library(Matrix ${PACKAGE_LIB_TYPE} ${MATRIX_SRCS})
+
+target_link_libraries(Matrix mU Function gmp)
 
