--- a/Package/Stream/CMakeLists.txt
+++ b/Package/Stream/CMakeLists.txt
@@ -11,5 +11,11 @@ else()
 endif()
 
 # FIXME: use Boost_LIBRARIES instead boost_system-mgw45-mt-1_45
-target_link_libraries(Stream mU gmp ${SOCK_LIB} boost_system-mgw45-mt-1_45) 
+if(WIN32)
+    target_link_libraries(Stream mU gmp ${SOCK_LIB} boost_system-mgw45-mt-1_45) 
+elseif(UNIX)
+    target_link_libraries(Stream mU gmp ${SOCK_LIB} boost_system)
+else()
+    message(FATAL_ERROR "building on an unsupported operating system")
+endif()
 
