--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Thu Feb 03 20:13:08 CST 2011
+#Wed Feb 09 21:33:17 CST 2011
 eclipse.preferences.version=1
 encoding/<project>=UTF-8
+encoding/Projects=GB2312
