[mU] 设定所有文本文件的svn:mime-type属性以指定字符编码

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Fri Feb 25 23:57:57 CST 2011
+#Sat Feb 26 00:30:52 CST 2011
 eclipse.preferences.version=1
 encoding//Projects/Differential/Differential.vcproj=GB2312
 encoding//Projects/Function/Function.vcproj=GB2312
@@ -7,6 +7,7 @@ encoding//Projects/Matrix/Matrix.vcproj=GB2312
 encoding//Projects/NumberTheory/NumberTheory.vcproj=GB2312
 encoding//Projects/Polynomial/Polynomial.vcproj=GB2312
 encoding//Projects/Stream/Stream.vcproj=GB2312
+encoding//Projects/mU.sln.old=GB2312
 encoding//Projects/mU/mU.vcproj=GB2312
 encoding/<project>=GBK
 encoding/Projects=UTF-8
