[mU] 忽略构建过程中自动生成的文件，使CMake文件支持MinGW平台

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 project(mU CXX)
 
-set(mU_HEADER_DIR ${mU_SOURCE_DIR}/Include /usr/include /usr/include/c++/4.5)
+set(mU_HEADER_DIR ${mU_SOURCE_DIR}/Include)
 #set(CMAKE_CXX_FLAGS "-std=c++0x -Wl,--enable-auto-import -L.")
 set(CMAKE_CXX_FLAGS "-std=c++0x -L.")
 set(EXECUTABLE_OUTPUT_PATH ..)
