--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -1,4 +1,12 @@
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. KERNEL_SRCS)
 add_library(kernel SHARED ${KERNEL_SRCS})
-target_link_libraries(kernel gmp dl)
+
+if(WIN32)
+    target_link_libraries(kernel gmp)
+elseif(UNIX)
+    target_link_libraries(kernel gmp dl)
+else()
+    message(FATAL_ERROR "building on an unsupported operating system")
+endif()
+
