[mU] 设置文件字符编码
1. Java源文件使用UTF-8编码，其他各种源文件使用GBK编码
2. 设置所有源文件的svn:mime-type属性指定字符编码
3. 在eclipse工程中指定各种文件的字符编码

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,24 @@
-#Mon May 03 12:32:16 CST 2010
+#Thu Mar 10 21:30:47 CST 2011
 eclipse.preferences.version=1
-encoding/<project>=UTF-8
+encoding//Combinatorics/Combinatorics.vcxproj=UTF-8
+encoding//Combinatorics/Combinatorics.vcxproj.filters=UTF-8
+encoding//Kernel/Kernel.vcxproj=UTF-8
+encoding//Kernel/Kernel.vcxproj.filters=UTF-8
+encoding//Link/Java/Java/mU=UTF-8
+encoding//Number/Number.vcxproj=UTF-8
+encoding//Number/Number.vcxproj.filters=UTF-8
+encoding//Numeric/Numeric.vcxproj=UTF-8
+encoding//Numeric/Numeric.vcxproj.filters=UTF-8
+encoding//Parser/Parser.vcxproj=UTF-8
+encoding//Parser/Parser.vcxproj.filters=UTF-8
+encoding//Polynomial/Polynomial.vcxproj=UTF-8
+encoding//Polynomial/Polynomial.vcxproj.filters=UTF-8
+encoding//String/String.vcxproj=UTF-8
+encoding//String/String.vcxproj.filters=UTF-8
+encoding//System/System.vcxproj=UTF-8
+encoding//System/System.vcxproj.filters=UTF-8
+encoding//mU/mU.reg=UTF-16LE
+encoding//mU/mU.vcxproj=UTF-8
+encoding//mU/mU.vcxproj.filters=UTF-8
+encoding/<project>=GBK
+encoding/mU.sln=UTF-8
