[mU] 当使用CMake/Eclipse构建时，生成的可执行文件和库放到bin子目录下，安装时亦同

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(mU CXX)
 set(mU_HEADER_DIR ${mU_SOURCE_DIR}/Include)
 #set(CMAKE_CXX_FLAGS "-std=c++0x -Wl,--enable-auto-import -L.")
 set(CMAKE_CXX_FLAGS "-std=c++0x -L.")
-set(EXECUTABLE_OUTPUT_PATH ..)
-set(LIBRARY_OUTPUT_PATH ..)
+set(EXECUTABLE_OUTPUT_PATH ../bin)
+set(LIBRARY_OUTPUT_PATH ../bin)
 
 add_subdirectory(Combinatorics)
 add_subdirectory(Kernel)
