--- a/Projects/mU/mU.vcxproj
+++ b/Projects/mU/mU.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\Kernel\main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{DE8ED561-B045-4E4F-99BC-4611B19F16CB}</ProjectGuid>
     <RootNamespace>mU</RootNamespace>
@@ -94,45 +97,10 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(OutDir)$(ProjectName).lib $(SolutionDir)\..\Lib\
-copy $(OutDir)$(ProjectName).exe $(SolutionDir)\..\
+      <Command>copy $(OutDir)$(ProjectName).exe $(SolutionDir)\..\
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\Kernel\box.cpp" />
-    <ClCompile Include="..\..\Kernel\coefficient.cpp" />
-    <ClCompile Include="..\..\Kernel\compare.cpp" />
-    <ClCompile Include="..\..\Kernel\do.cpp" />
-    <ClCompile Include="..\..\Kernel\dot.cpp" />
-    <ClCompile Include="..\..\Kernel\eval.cpp" />
-    <ClCompile Include="..\..\Kernel\evalf.cpp" />
-    <ClCompile Include="..\..\Kernel\expand.cpp" />
-    <ClCompile Include="..\..\Kernel\gen.cpp" />
-    <ClCompile Include="..\..\Kernel\initialize.cpp" />
-    <ClCompile Include="..\..\Kernel\main.cpp" />
-    <ClCompile Include="..\..\Kernel\number.cpp" />
-    <ClCompile Include="..\..\Kernel\package.cpp" />
-    <ClCompile Include="..\..\Kernel\parser.cpp" />
-    <ClCompile Include="..\..\Kernel\path.cpp" />
-    <ClCompile Include="..\..\Kernel\pattern.cpp" />
-    <ClCompile Include="..\..\Kernel\plus.cpp" />
-    <ClCompile Include="..\..\Kernel\power.cpp" />
-    <ClCompile Include="..\..\Kernel\pretty.cpp" />
-    <ClCompile Include="..\..\Kernel\print.cpp" />
-    <ClCompile Include="..\..\Kernel\scan.cpp" />
-    <ClCompile Include="..\..\Kernel\string.cpp" />
-    <ClCompile Include="..\..\Kernel\times.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\Kernel\character.h" />
-    <ClInclude Include="..\..\Include\mU\Kernel.h" />
-    <ClInclude Include="..\..\Include\mU\Number.h" />
-    <ClInclude Include="..\..\Include\mU\Parser.h" />
-    <ClInclude Include="..\..\Include\mU\Pattern.h" />
-    <ClInclude Include="..\..\Include\mU\String.h" />
-    <ClInclude Include="..\..\Include\mU\Var.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
