[mU] 修正CMakeLists.txt中用于控制dllexport的*_EXPORTS宏的大小写

--- a/Package/Function/CMakeLists.txt
+++ b/Package/Function/CMakeLists.txt
@@ -3,6 +3,8 @@ AUX_SOURCE_DIRECTORY(. FUNCTION_SRCS)
 
 # FIXME: which library type should be used here? use SHARED for now
 add_library(Function SHARED ${FUNCTION_SRCS})
+set_target_properties(Function PROPERTIES 
+                        COMPILE_DEFINITIONS "FUNCTION_EXPORTS")
 
 target_link_libraries(Function mU gmp mpfr)
 
