--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. KERNEL_SRCS)
 add_executable(mU ${KERNEL_SRCS})
 set_target_properties(mU PROPERTIES
+                        COMPILE_DEFINITIONS "KERNEL_EXPORTS"
                         ENABLE_EXPORTS ON)
 if(WIN32)
     target_link_libraries(mU gmp)
