--- a/Package/Stream/CMakeLists.txt
+++ b/Package/Stream/CMakeLists.txt
@@ -1,6 +1,8 @@
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. STREAM_SRCS)
 add_library(Stream ${PACKAGE_LIB_TYPE} ${STREAM_SRCS})
+set_target_properties(Stream PROPERTIES
+                        COMPILE_DEFINITIONS "STREAM_EXPORTS")
                         
 if(WIN32)
     set(SOCK_LIB wsock32 ws2_32)
