[mU] 修改各个CMakeLists.txt文件，将Kernel模块从mU可执行文件中分离出来

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -1,13 +1,43 @@
 include_directories(${mU_HEADER_DIR})
-AUX_SOURCE_DIRECTORY(. KERNEL_SRCS)
-add_executable(mU ${KERNEL_SRCS})
-set_target_properties(mU PROPERTIES
-                        COMPILE_DEFINITIONS "KERNEL_EXPORTS"
-                        ENABLE_EXPORTS ON)
+
+set(KERNEL_SRCS 
+        box.cpp
+        coefficient.cpp
+        compare.cpp
+        do.cpp
+        dot.cpp
+        eval.cpp
+        evalf.cpp
+        expand.cpp
+        gen.cpp
+        initialize.cpp
+        Interface.cpp
+        number.cpp
+        package.cpp
+        parser.cpp
+        path.cpp
+        pattern.cpp
+        plus.cpp
+        power.cpp
+        pretty.cpp
+        print.cpp
+        scan.cpp
+        string.cpp
+        times.cpp
+)
+add_library(Kernel ${PACKAGE_LIB_TYPE} ${KERNEL_SRCS})
+
+set_target_properties(Kernel PROPERTIES
+                            COMPILE_DEFINITIONS "KERNEL_EXPORTS")
+
 if(WIN32)
-    target_link_libraries(mU gmp)
+    target_link_libraries(Kernel gmp)
 elseif(UNIX)
-    target_link_libraries(mU pthread gmp dl)
+    target_link_libraries(Kernel pthread gmp dl)
 else()
     message(FATAL_ERROR "building on an unsupported operating system")
 endif()
+
+set(MU_SRCS main.cpp)
+add_executable(mU ${MU_SRCS})
+target_link_libraries(mU Kernel gmp dl)
