--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,10 @@ set(CMAKE_CXX_FLAGS "-Wno-deprecated")
 set(EXECUTABLE_OUTPUT_PATH ..)
 set(LIBRARY_OUTPUT_PATH ..)
 
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
-set(CMAKE_SHARED_LIBRARY_SUFFIX ".dll")
-set(CMAKE_SHARED_MODULE_PREFIX "")
-set(CMAKE_SHARED_MODULE_SUFFIX ".dll")
+# set(CMAKE_SHARED_LIBRARY_PREFIX "")
+# set(CMAKE_SHARED_LIBRARY_SUFFIX ".dll")
+# set(CMAKE_SHARED_MODULE_PREFIX "")
+# set(CMAKE_SHARED_MODULE_SUFFIX ".dll")
     
 # FIXME: can we simply set the library type to SHARED?
 # issue 1: what's the difference between SHARED and MODULE on UNIX gcc
@@ -32,7 +32,7 @@ set(CMAKE_SHARED_MODULE_SUFFIX ".dll")
 if(WIN32)
     set(PACKAGE_LIB_TYPE SHARED)
 elseif(UNIX)
-    set(PACKAGE_LIB_TYPE MODULE) 
+    set(PACKAGE_LIB_TYPE SHARED) 
 else()
     message(FATAL_ERROR "building on an unsupported operating system")
 endif() 
