[mU] 修改CMake文件，检查第三方库可用性，修正错误 1. 检查系统上是否已安装gmp和mpfr库 2. 修改各模块生成出的库文件的前缀、后缀，保证可以正常链接和动态加载

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -28,7 +28,10 @@ set(KERNEL_SRCS
 add_library(Kernel ${PACKAGE_LIB_TYPE} ${KERNEL_SRCS})
 
 set_target_properties(Kernel PROPERTIES
-                            COMPILE_DEFINITIONS "KERNEL_EXPORTS")
+                            COMPILE_DEFINITIONS "KERNEL_EXPORTS"
+                            LIBRARY_OUTPUT_NAME "kernel"
+                            PREFIX "lib"
+                            SUFFIX ".so")
 
 if(WIN32)
     target_link_libraries(Kernel gmp)
