--- a/Package/Matrix/CMakeLists.txt
+++ b/Package/Matrix/CMakeLists.txt
@@ -1,3 +1,4 @@
+include(${CMAKE_SOURCE_DIR}/UnifyPackageNameFormat.cmake)
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. MATRIX_SRCS)
 
