--- a/Package/Stream/CMakeLists.txt
+++ b/Package/Stream/CMakeLists.txt
@@ -1,3 +1,4 @@
+include(${CMAKE_SOURCE_DIR}/UnifyPackageNameFormat.cmake)
 include_directories(${mU_HEADER_DIR})
 AUX_SOURCE_DIRECTORY(. STREAM_SRCS)
 add_library(Stream ${PACKAGE_LIB_TYPE} ${STREAM_SRCS})
