--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Sat Feb 26 00:30:52 CST 2011
+#Thu May 12 16:09:39 CST 2011
 eclipse.preferences.version=1
 encoding//Projects/Differential/Differential.vcproj=GB2312
 encoding//Projects/Function/Function.vcproj=GB2312
@@ -11,3 +11,5 @@ encoding//Projects/mU.sln.old=GB2312
 encoding//Projects/mU/mU.vcproj=GB2312
 encoding/<project>=GBK
 encoding/Projects=UTF-8
+encoding/bootstrap.sh=UTF-8
+encoding/build.sh=UTF-8
